# subtitle-translator

./: .gitignore  README.md  cert.pem  hook-qt.py  key.pem  pyproject.toml  rthook.py  setup.py  web_app_standalone.py
.github/workflows/: build.yml
subtitle_translator/: __init__.py  __version__.py
subtitle_translator/cli/: __init__.py  main.py
subtitle_translator/core/: __init__.py  exceptions.py  translator.py
subtitle_translator/gui/: __init__.py  main.py  main.py.backup
subtitle_translator/translators/: __init__.py  base.py  deepl_translator.py  gemini_translator.py  google_translator.py  hf_translator.py  local_nllb_translator.py  translator_factory.py
subtitle_translator/utils/: config.py  subtitle_parser.py
