[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subtitle-translator"
version = "0.1.0"
description = "A powerful subtitle translation tool with support for multiple translation backends"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.8.0",
    "langdetect>=1.0.9",
    "PyQt6>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "isort>=5.0",
    "mypy>=0.900",
]

[project.scripts]
subtitle-translator = "subtitle_translator.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["subtitle_translator*"]
